Ensure icons can't be entirely hidden behind the location marker

--- a/frontend/src/features/ol_map/olMap.css
+++ b/frontend/src/features/ol_map/olMap.css
@@ -32,7 +32,7 @@ c.f. https://github.com/openlayers/openlayers/issues/13495
 	height: 28px;
 	width: 28px;
 	transform: scale(1);
-	background: rgba(34, 105, 146, 1);
+	background: rgba(34, 105, 146, 0.9);
 	box-shadow: 0 0 0 0 rgba(34, 105, 146, 1);
 	animation: pulse-marker 2s infinite;
 }
